--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -54,3 +54,10 @@ h3{
 #submit-button{
     background-color:rgb(106, 213, 178);
 }
+
+footer
+{
+    margin-top:50px;
+    width:100%;
+    height:200px;
+   }
