--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -8,7 +8,7 @@ body{
     background-color:rgb(93, 101, 122);
 }
 
-.picture {
+.picture{
    width: 600px;
    height: 800px;
    margin-left: 50;
@@ -37,10 +37,11 @@ h2{
     transform: translate(0, -300px);
     }
 
-#contact-form {
+#contact-form{
     color: aquamarine;
     background-color: none;
-    transform: translate(0px, -320px)
+    align-content: last baseline;
+    align-items: self-end;
 }
 
 h3{
@@ -55,9 +56,23 @@ h3{
     background-color:rgb(106, 213, 178);
 }
 
-footer
-{
+footer{
     margin-top:50px;
-    width:300%;
+    width:200%;
     height:500px;
    }
+
+
+   .bi--linkedin {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
