--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -63,7 +63,7 @@ footer{
    }
 
 
-   .bi--linkedin {
+   .linkedin-icon{
     font-size: 2em;
     display: inline-block;
     width: 1em;
@@ -79,13 +79,17 @@ footer{
   }
 
 
-  .github-icon {
+  .github-icon{
     font-size: 2em; /* Tamaño del ícono */
     color: white; /* Color del ícono */
     text-decoration: none; /* Sin subrayado */
     display: inline-block;
     transition: color 0.3s; /* Transición suave para el color */
 }
-.github-icon:hover {
-    color: #f0f0f0; /* Color del ícono al pasar el ratón */
+.github-icon:hover{
+    color: rgb(106, 213, 178); /* Color del ícono al pasar el ratón */
+}
+
+.linkedin-icon:hover{
+    color: rgb(106, 213, 178); /* Color del ícono al pasar el ratón */
 }
