--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -6,6 +6,10 @@
 
 body{
     background-color:rgb(93, 101, 122);
+    padding: 5%;
+    padding-top: 0%;
+    padding-right: 0%;
+   
 }
 
 .container {
@@ -14,11 +18,17 @@ body{
 
 }
 
+h2{
+    color: antiquewhite;
+    font-size: 600%;
+}
+
+
 .picture{
     width: 40%;
     height: auto; /* Mantiene la proporción de la imagen */
     float: left; /* Alinea la imagen a la izquierda */
-    margin-right: 10%;
+    margin-right: 100%;
     margin-left: 60%;
 }
 
@@ -26,7 +36,6 @@ body{
 h2{
     color: antiquewhite;
     font-size: 600%;
-    align-items: flex-start;
 }
 
 
@@ -40,13 +49,20 @@ h2{
 .icons{
     align-content:flex-end;
     align-items: flex-start;
+    float:right;
+    padding-block-end: 20%;
+
+    
 }
 
 #contact-form{
     color: aquamarine;
     background-color: none;
+    float: left;
     align-content: last baseline;
 }
+
+
 
 h3{
   color:  rgb(106, 213, 178);
