--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -6,9 +6,10 @@
 
 body{
     background-color:rgb(93, 101, 122);
-    padding: 5%;
+    padding: 4%;
     padding-top: 0%;
     padding-right: 0%;
+    padding-block-end: 25%;
    
 }
 
@@ -20,7 +21,8 @@ body{
 
 h2{
     color: antiquewhite;
-    font-size: 600%;
+    font-size: 700%;
+    margin-top: -10%;
 }
 
 
@@ -43,14 +45,19 @@ h2{
     color:rgb(106, 213, 178);
     font-size: 200%;
     align-items: flex-start;
+    margin-top: 0%;
 }
 
+.linkedin-icon {
+    
+}
 
 .icons{
     align-content:flex-end;
     align-items: flex-start;
-    float:right;
-    padding-block-end: 20%;
+    float:inline-end;
+    
+    
 
     
 }
@@ -108,7 +115,17 @@ h3{
 @media (max-width: 400px){
  
 .picture{
-    width: 100%;
+    float: left;
+    size-adjust: 100%;
+}
+
+#contact-form {
+    align-content: center;
+    padding-inline-end: 20%;
+}
+
+h2{
+    size:10%;
 }
 
 }
