--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -37,7 +37,8 @@ h2{
 
 h2{
     color: antiquewhite;
-    font-size: 600%;
+    font-size: 500%;
+    margin-top: 2%;
 }
 
 
@@ -45,7 +46,7 @@ h2{
     color:rgb(106, 213, 178);
     font-size: 200%;
     align-items: flex-start;
-    margin-top: 0%;
+    margin-top: 10%;
 }
 
 .linkedin-icon {
@@ -115,7 +116,7 @@ h3{
 }
 
 
-@media (max-width: 400px){
+@media  (max-width: 400px){
  
 .picture{
     float: left;
@@ -125,12 +126,13 @@ h3{
 #contact-form {
     align-content: center;
     padding-inline-end: 20%;
-    margin-right: 10%;
+    align-items: center;
+    
 }
 
 h2{
     font-size:200%;
-    margin-top: 0%;
+    margin-top: 6%;
 }
 
 .info{
@@ -146,6 +148,17 @@ h2{
     font-size: 2em
     
 }
+
+
+}
+
+@media (max-width: 600px){
+
+    h2{
+        font-size:250%;
+        margin-top: 0%;
+    }
+    
 
 
 }
