--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -21,8 +21,8 @@ body{
 
 h2{
     color: antiquewhite;
-    font-size: 700%;
-    margin-top: -10%;
+    font-size: 200%;
+    
 }
 
 
@@ -33,14 +33,6 @@ h2{
     margin-right: 100%;
     margin-left: 60%;
 }
-
-
-h2{
-    color: antiquewhite;
-    font-size: 500%;
-    margin-top: 2%;
-}
-
 
 .info{
     color:rgb(106, 213, 178);
@@ -58,17 +50,13 @@ h2{
     align-content:flex-end;
     align-items: flex-start;
     float:inline-end;
-    
-    
-
-    
-}
+ }
 
 #contact-form{
     color: aquamarine;
     background-color: none;
     float: left;
-    align-content: last baseline;
+    
 }
 
 
@@ -135,7 +123,8 @@ h3{
 
 h2{
     font-size:100%;
-    margin-top: 6%;
+    position: relative;
+    
 }
 
 .info{
