--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -13,175 +13,117 @@ body{
    
 }
 
-.container {
-    display: flex;
-    justify-content: flex-start;
-
+.photo {
+    margin: 10%;
 }
 
-h2{
+.picture {
+    max-width: 60%;
+    height: auto;
+}
+
+h2 {
+    margin: 0;
     color: antiquewhite;
-    font-size: 20%;
+    font-size: 2em;
+}
+
+.info {
+    font-size: 1em;
+    margin: 0;
+    color: rgb(106, 213, 178);
+}
+
+.icons {
+    margin: 20px 0;
+}
+
+.icons:hover{
+    color: rgb(106, 213, 178);
+}
+
+.icons a {
+    text-decoration: none;
+    color: #333;
+    margin: 0 10px;
+    font-size: 1.5em;
+}
+
+.form {
+    margin: 20px auto;
+    max-width: 600px;
+    padding: 0 20px;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    box-sizing: border-box;
+}
+
+#submit-button {
+    padding: 10px 20px;
+    font-size: 1em;
+    border:1em;
     
+    cursor: pointer;
+}
+
+#submit-button:hover {
+    color: rgb(106, 213, 178);
 }
 
 
-.picture{
-    width: 40%;
-    height: auto; /* Mantiene la proporción de la imagen */
-    float: left; /* Alinea la imagen a la izquierda */
-    margin-right: 100%;
-    margin-left: 60%;
-}
-
-.info{
-    color:rgb(106, 213, 178);
-    font-size: 200%;
-    align-items: flex-start;
-    margin-top: 10%;
-}
-
-.linkedin-icon {
-    white-space: 60%;
-    
-}
-
-.icons{
-    align-content:flex-end;
-    align-items: flex-start;
-    float:inline-end;
- }
-
- .col-6.col-sm-2 {
-    padding: 0; /* Ajusta el padding si es necesario */
-    text-align: center; /* Centra la imagen dentro del contenedor */
-}
-
-#contact-form{
-    color: aquamarine;
-    background-color: none;
-    float: left;
-    
-}
-
-
-
-h3{
-  color:  rgb(106, 213, 178);
-}
-
-.required{
-  color: antiquewhite;
-}
-
-#submit-button{
-    background-color:rgb(106, 213, 178);
-}
-
-
-   .linkedin-icon{
-    font-size: 3em;
-    color: white;
-    display:grid;
-    width: 1em;
-    height: 1em;
-    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
-    background-color: currentColor;
-    -webkit-mask-image: var(--svg);
-    mask-image: var(--svg);
-  }
-
-
-  .github-icon{
-    font-size: 3em; /* Tamaño del ícono */
-    color: white; /* Color del ícono */
-    text-decoration: none; /* Sin subrayado */
-    display: inline-block;
-    transition: color 0.3s; /* Transición suave para el color */
-    align-items: first baseline;
-}
-.github-icon:hover{
-    color: rgb(106, 213, 178); /* Color del ícono al pasar el ratón */
-}
-
-.linkedin-icon:hover{
-    color: rgb(106, 213, 178); /* Color del ícono al pasar el ratón */
-}
-
-
-@media  (max-width: 320px){
- 
-    body{
-        padding: 30%;
-        }
-
-.picture{
-    float: left;
-    
-}
-
-#contact-form {
-    align-content: center;
-    padding-inline-end: 20%;
-    
-}
-
-h2{
-    font-size:100%;
-    position: relative;
-    
-}
-
-.info{
-    font-size: 80%;
-}
-
-.github-icon{
-    font-size: 2em
-    
-}
-
-.linkedin-icon{
-    font-size: 2em
-    
-}
-
-
-}
-
-@media  (max-width: 960px){
- 
-   
-
-    .picture{
-        float: left;
-    
-        
+/* Breakpoint para dispositivos móviles (menores a 576px) */
+@media (max-width: 575.98px) {
+    h2 {
+        font-size: 1.5em;
     }
-    
-    #contact-form {
-       
-        align-content: center;
-        padding-inline-end: 30%;
-        margin-block: 40%;
+
+    .info {
+        font-size: 0.9em;
     }
-    
-    h2{
-        font-size:500%;
-        margin-top: 6%;
+
+    .icons a {
+        font-size: 1.2em;
     }
-    
-    .info{
-        font-size: 250%;
+}
+
+/* Breakpoint para tabletas (de 576px a 768px) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    h2 {
+        font-size: 1.8em;
     }
-    
-    .github-icon{
-        font-size: 3em
-        
+
+    .info {
+        font-size: 1em;
     }
-    
-    .linkedin-icon{
-        font-size: 3em
-        
+
+    .icons a {
+        font-size: 1.3em;
     }
- }
+
+    .form {
+        max-width: 500px;
+    }
+}
+
+/* Breakpoint para escritorio (768px o más) */
+@media (min-width: 768px) {
+    h2 {
+        font-size: 2.2em;
+    }
+
+    .info {
+        font-size: 1.1em;
+    }
+
+    .icons a {
+        font-size: 1.5em;
+    }
+
+    .form {
+        max-width: 600px;
+    }
+}
