--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -9,25 +9,24 @@ body{
     padding: 2%;
     padding-inline-start: 0%;
     padding-right: 0%;
-    padding-block-end: 25%;
+    padding-block-end: 2%;
    
 }
 
 .photo {
-    margin: 10%;
+    margin: 0%;
+    float: left;
 }
 
 .picture {
     width: 40%;
-    height: auto; /* Mantiene la proporción de la imagen */
-    
 
 }
 
-h2 {
+.name {
     margin: 0;
     color: antiquewhite;
-    font-size: 300%;
+    font-size: 600%;
 }
 
 .info {
@@ -80,9 +79,9 @@ h2 {
 
 
 /* Breakpoint para dispositivos móviles (menores a 576px) */
-@media (max-width: 575.98px) {
-    h2 {
-        font-size: 1.5em;
+@media (max-width: 450px) {
+    .name {
+        font-size: 200%;
     }
 
     .info {
