--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -30,10 +30,22 @@ body{
 }
 
 .info {
-    font-size: 1em;
+    font-size: 700%;
     margin: 0;
     color: rgb(106, 213, 178);
 }
+.linkedin-icon{
+    font-size: 3em;
+color:antiquewhite;
+display:grid;
+width: 1em;
+height: 1em;
+--svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
+background-color: currentColor;
+-webkit-mask-image: var(--svg);
+mask-image: var(--svg);
+}
+
 
 .icons a {
     text-decoration: none;
@@ -41,7 +53,11 @@ body{
     margin: 0 10px;
     font-size: 1.5em;
 }
-.icons:hover{
+.linkedin-icon:hover{
+    color: rgb(106, 213, 178);
+}
+
+.github-icon:hover{
     color: rgb(106, 213, 178);
 }
 
@@ -76,7 +92,7 @@ body{
     }
 
     .info {
-        font-size: 0.9em;
+        font-size: 80%;
     }
 
     .icons a {
@@ -90,7 +106,7 @@ body{
     }
 
     .info {
-        font-size: 1em;
+        font-size: 150%;
     }
 
     .icons a {
@@ -108,7 +124,7 @@ body{
     }
 
     .info {
-        font-size: 1.1em;
+        font-size: 200%;
     }
 
     .icons a {
