--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -1,5 +1,3 @@
-
-
 *{
     font-family: monospace;
 }
@@ -10,16 +8,18 @@ body{
     padding-inline-start: 0%;
     padding-right: 0%;
     padding-block-end: 2%;
-   
+    margin: 40px; 
 }
 
 .photo {
     margin: 0%;
     float: left;
+    margin-right: 0px;
+  
 }
 
 .picture {
-    width: 40%;
+    width: 40%;Sí, quiero
 
 }
 
@@ -38,8 +38,8 @@ body{
     font-size: 3em;
 color:antiquewhite;
 display:grid;
-width: 1em;
-height: 1em;
+width: 2em;
+height: 2em;
 --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
 background-color: currentColor;
 -webkit-mask-image: var(--svg);
@@ -47,12 +47,21 @@ mask-image: var(--svg);
 }
 
 
+.icons {
+    display: flex; 
+    justify-content:flex-end;
+    gap: 10px; 
+}
+
 .icons a {
     text-decoration: none;
-    color:antiquewhite;
-    margin: 0 10px;
-    font-size: 1.5em;
+    color: antiquewhite;
+    font-size: 3em; 
+    display: flex; 
+    align-items: center; 
 }
+
+
 .linkedin-icon:hover{
     color: rgb(106, 213, 178);
 }
@@ -62,18 +71,22 @@ mask-image: var(--svg);
 }
 
 .form {
-    margin: 20%;
-    max-width: 600px;
-    padding: 0 20px;
-    color:aquamarine;
+    margin: 0; 
+    max-width: 60px; 
+    color: aquamarine;
+    margin-top: 20px; 
+    margin-left: 520px; /
+    padding: 0 20px; 
+  
 }
+
 .required{
     color:antiquewhite;
 }
 .input {
-    width: 100%;
-    padding: 3%;
-    margin: 5% 0;
+    width: 70%;
+    padding: 1%;
+    margin: 3% 0;
     box-sizing: border-box;
 }
 #submit-button {
@@ -84,6 +97,12 @@ mask-image: var(--svg);
     stroke-width: 2em;
     border:3em;
     cursor: pointer;
+    margin-left: 350px
+}
+
+#submit-button:hover{
+background-color: grey;
+color: antiquewhite;
 }
 
 @media (max-width: 450px) {
