--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -1,182 +1,172 @@
-*{
+* {
     font-family: monospace;
     box-sizing: border-box;
 }
 
-body{
-    background-color:rgb(93, 101, 122);
+body {
+    background-color: rgb(69, 74, 90);
     padding: 2%;
     padding-inline-start: 0%;
     padding-right: 0%;
     padding-block-end: 2%;
-    margin: 40px; 
+    margin: 40px;
+    color: antiquewhite; 
 }
 
 .photo {
-    display: block; 
-    margin: 0 auto; 
-    width: 70%; 
+    display: block;
+    margin: 0 auto;
+    width: 70%;
 }
 
 .picture {
-    width: 100%; 
+    width: 100%;
 }
 
 .form-container {
-    border: 2px solid white; 
-    border-radius: 8px; 
+    border: 2px solid white;
+    border-radius: 8px;
     padding: 20px;
     max-width: 90%;
-    margin: 20px auto; 
-    background-color: rgba(0, 0, 0, 0.3); 
+    margin: 20px auto;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .input {
-    width: calc(100% - 22px); /* Ajuste del ancho para considerar el padding del contenedor */
+    width: calc(100% - 22px); 
     padding: 1%;
-    margin: 10px 0; 
-    border: 1px solid white; 
-    border-radius: 4px; 
-    background-color: transparent; 
-    color: white; 
+    margin: 5px 0;
+    border: 1px solid white;
+    border-radius: 4px;
+    background-color: transparent;
+    color: white;
 }
 
 .name {
     margin: 0;
     color: antiquewhite;
-    font-size: 600%;
-    
+    font-size: 4em; 
 }
 
 .info {
-    font-size: 700%;
+    font-size: 1.5em; 
     margin: 0;
     color: rgb(106, 213, 178);
 }
-.linkedin-icon{
-    font-size: 3em;
-color:antiquewhite;
-display:grid;
-width: 2em;
-height: 2em;
---svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
-background-color: currentColor;
--webkit-mask-image: var(--svg);
-mask-image: var(--svg);
+
+.linkedin-icon {
+    font-size: 2.5em; 
+    color: antiquewhite;
+    display: grid;
+    width: 2em;
+    height: 2em;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
 }
 
-
 .icons {
-    display: flex; 
-    justify-content:flex-end;
-    gap: 10px; 
+    display: flex;
+    justify-content: flex-end; /* mantiene íconos a la derecha */
+    gap: 10px;
 }
 
 .icons a {
     text-decoration: none;
     color: antiquewhite;
-    font-size: 90em; 
-    display: flex; 
-    align-items: center; 
+    font-size: 1.5em; 
+    display: flex;
+    align-items: center;
 }
 
-
-.linkedin-icon:hover{
+.linkedin-icon:hover {
     color: rgb(106, 213, 178);
 }
 
-
 .github-icon {
-    font-size: 260% !important;
+    font-size: 1.5em; 
     color: antiquewhite;
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
 }
-.github-icon:hover{
+
+.github-icon:hover {
     color: rgb(106, 213, 178);
 }
 
 .form {
-    margin: 0; 
-    max-width: 60px; 
-    color: aquamarine;
-    margin-top: 20px; 
-    margin-left: 520px; /
-    padding: 0 20px; 
-  
+    margin: 20px auto;
+    max-width: 90%; 
+    padding: 20px;
 }
 
-.required{
-    color:antiquewhite;
+.required {
+    color: antiquewhite;
 }
-.input {
-    width: 70%;
-    padding: 1%;
-    margin: 3% 0;
-    box-sizing: border-box;
-}
+
 #submit-button {
     background-color: aquamarine;
-    color:rgb(72, 74, 76);
+    color: rgb(72, 74, 76);
     padding: 10px 20px;
     font-size: 1em;
-    stroke-width: 2em;
-    border:3em;
+    border: none; 
     cursor: pointer;
-    margin-left: 350px
+    margin-top: 10px; 
 }
 
-#submit-button:hover{
-background-color: grey;
-color: antiquewhite;
+#submit-button:hover {
+    background-color: grey;
+    color: antiquewhite;
 }
+
 
 @media (max-width: 450px) {
     .name {
-        font-size: 200%;
+        font-size: 2em;
     }
 
     .info {
-        font-size: 80%;
+        font-size: 1em;
     }
 
     .icons a {
-        font-size: 1.2em;
+        font-size: 1.2em; 
     }
 }
 
 @media (min-width: 451px) and (max-width: 767.98px) {
     .name {
-        font-size: 400%;
+        font-size: 3em;
     }
 
     .info {
-        font-size: 150%;
+        font-size: 1.2em;
     }
 
     .icons a {
-        font-size: 1.3em;
+        font-size: 1.3em; 
     }
 
     .form {
-        max-width: 500px;
+        max-width: 80%;
     }
 }
 
 @media (min-width: 768px) {
     .name {
-        font-size: 600%;
+        font-size: 4em;
     }
 
     .info {
-        font-size: 200%;
-    }
-
-    .icons a {
         font-size: 1.5em;
     }
 
+    .icons a {
+        font-size: 1.5em; 
+    }
+
     .form {
-        max-width: 600px;
+        max-width: 60%;
     }
 }
