--- a/style_3.3.1.css
+++ b/style_3.3.1.css
@@ -6,21 +6,80 @@
 body {
     background-color: rgb(69, 74, 90);
     padding: 2%;
-    padding-inline-start: 0%;
-    padding-right: 0%;
-    padding-block-end: 2%;
     margin: 40px;
-    color: antiquewhite; 
+    color: antiquewhite;
 }
 
 .photo {
     display: block;
     margin: 0 auto;
     width: 70%;
+    position: relative;
 }
 
 .picture {
     width: 100%;
+}
+
+.name-container, .info-container {
+    position: absolute;
+    left: 0;
+    width: 70%;
+    color: antiquewhite;
+}
+
+.name {
+    margin: 0;
+    font-size: 4em;
+}
+
+.info {
+    font-size: 1.5em;
+    margin: 0;
+    color: rgb(106, 213, 178);
+    margin-top: 10px;
+}
+
+.linkedin-icon, .github-icon {
+    width: 2.5em; /* Tamaño consistente para ambos iconos */
+    height: 2.5em;
+    color: antiquewhite;
+}
+
+.linkedin-icon {
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+}
+
+.github-icon {
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M8 0a8 8 0 00-2.542 15.596c.404.075.553-.175.553-.39v-1.491c-2.21.482-2.67-1.06-2.67-1.06-.361-.914-.88-1.156-.88-1.156-.719-.491.055-.481.055-.481.797.056 1.287.819 1.287.819.711 1.217 1.867.864 2.322.661.072-.516.278-.864.506-1.063-1.777-.202-3.64-.888-3.64-3.952 0-.874.313-1.586.83-2.146-.083-.204-.361-1.026.079-2.136 0 0 .674-.215 2.207.82.636-.177 1.317-.267 1.992-.271.675.004 1.357.094 2.007.272 1.534-1.036 2.207-.82 2.207-.82.44 1.11.163 1.932.08 2.136.515.56.828 1.273.828 2.146 0 3.075-1.871 3.749-3.654 3.946.29.248.548.737.548 1.485v2.189c0 .216.148.467.558.39A8 8 0 008 0z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+}
+
+.icons {
+    display: flex;
+    justify-content: flex-end; /* mantiene íconos a la derecha */
+    gap: 20px; 
+    margin-top: 15px;
+}
+
+.icons a {
+    text-decoration: none;
+    color: antiquewhite;
+    display: flex;
+    align-items: center;
+}
+
+.linkedin-icon:hover {
+    color: rgb(106, 213, 178);
+}
+
+.github-icon:hover {
+    color: rgb(106, 213, 178);
 }
 
 .form-container {
@@ -40,59 +99,6 @@ body {
     border-radius: 4px;
     background-color: transparent;
     color: white;
-}
-
-.name {
-    margin: 0;
-    color: antiquewhite;
-    font-size: 4em; 
-}
-
-.info {
-    font-size: 1.5em; 
-    margin: 0;
-    color: rgb(106, 213, 178);
-}
-
-.linkedin-icon {
-    font-size: 2.5em; 
-    color: antiquewhite;
-    display: grid;
-    width: 2em;
-    height: 2em;
-    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23000' d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'/%3E%3C/svg%3E");
-    background-color: currentColor;
-    -webkit-mask-image: var(--svg);
-    mask-image: var(--svg);
-}
-
-.icons {
-    display: flex;
-    justify-content: flex-end; /* mantiene íconos a la derecha */
-    gap: 10px;
-}
-
-.icons a {
-    text-decoration: none;
-    color: antiquewhite;
-    font-size: 1.5em; 
-    display: flex;
-    align-items: center;
-}
-
-.linkedin-icon:hover {
-    color: rgb(106, 213, 178);
-}
-
-.github-icon {
-    font-size: 1.5em; 
-    color: antiquewhite;
-    display: flex;
-    align-items: center;
-}
-
-.github-icon:hover {
-    color: rgb(106, 213, 178);
 }
 
 .form {
@@ -119,7 +125,6 @@ body {
     background-color: grey;
     color: antiquewhite;
 }
-
 
 @media (max-width: 450px) {
     .name {
